# zephyr

./: .env.example  .prettierignore  .prettierrc  .releaserc.json  CHANGELOG.md  LICENSE  README.md  TODO.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build-env.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bangs.rs  key_chord_parser.rs  key_listener.rs  lib.rs  logger.rs  main.rs  search.rs  startup.rs  system_tray.rs  updater.rs
src-tauri/src/bangs/: api.rs  mod.rs  models.rs  parser.rs  storage.rs
src/components/: BangInfoMessage.vue  InfoPanel.vue  SearchInput.vue  SearchSuggestions.vue  SettingsPanel.vue
src/utils/: api.ts  logger.ts  searchService.ts  windowUtils.ts
