[package]
name = "haku"
version = "0.1.0"
description = "Desktop Omnisearch"
authors = ["Zach Connelly"]
edition = "2021"

[lib]
name = "haku_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.3", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-opener = "2.2"
tauri-plugin-global-shortcut = "2.2"
reqwest = { version = "0.12.12", features = ["json"] }
urlencoding = "2.1"
lazy_static = "1.5"
