[package]
name = "zephyr"
version = "0.1.0"
description = "Desktop Omnisearch"
authors = ["Zach Connelly"]
edition = "2021"

[lib]
name = "zephyr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.3", features = ["tray-icon"] }
tauri-plugin-opener = "2.2"
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-updater = "2.5"
tauri-plugin-shell = "2.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
winreg = "0.55"
dirs = "6.0"
flexi_logger = "0.29"
log = "0.4"
